--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
         connectMQTT();
     </script>
-    <script src="main.js"></script>
+    <script src="mqttws31.js"></script>
 
 </body>
 
