--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MQTT Dashboard</title>
-
-    <!-- استفاده از نسخه CDN مطمئن -->
-    <script src="https://unpkg.com/paho-mqtt/mqttws31.min.js"></script>
+    <script src="mqttws31.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
     <style>
         body {
             background-color: #bbb8b8;
@@ -57,7 +54,7 @@
 </head>
 
 <body>
-    <h1>MQTT Dashboard (Secure)</h1>
+    <h1>MQTT Multi-Button Dashboard</h1>
     <div class="circle" id="buttonCircle">OFF</div>
     <div class="circle" id="ledCircle">0</div>
 
@@ -77,7 +74,7 @@
 
     <script>
         const hostname = "broker.hivemq.com";
-        const port = 8884;
+        const port = 8000;
         const buttonTopic = "Button1StateMostafa";
         const sensorTopic = "SensorDataClever";
         const ledTopic = "LEDroshankon";
@@ -104,10 +101,9 @@
 
         function connectMQTT() {
             client.connect({
-                useSSL: true,
                 keepAliveInterval: 60,
                 onSuccess: function () {
-                    console.log("Connected securely");
+                    console.log("Connected successfully");
                     document.getElementById("status").textContent = "Connected";
                     [buttonTopic, sensorTopic].forEach(topic => client.subscribe(topic));
                 },
@@ -159,6 +155,7 @@
             }
         }
 
+        // Chart.js setup
         const ctx = document.getElementById('sensorChart').getContext('2d');
         const sensorChart = new Chart(ctx, {
             type: 'line',
@@ -186,25 +183,22 @@
         });
 
         function updateSensorChart(value) {
-            const now = new Date();
-            const timestamp = now.toLocaleTimeString();
-            const val = parseFloat(value);
+                const now = new Date();
+                const timestamp = now.toLocaleDateString() + " " + now.toLocaleTimeString();
+                const val = parseFloat(value);
 
-            sensorChart.data.labels.push(timestamp);
-            sensorChart.data.datasets[0].data.push(val);
+                sensorChart.data.labels.push(timestamp);
+                sensorChart.data.datasets[0].data.push(val);
 
-            if (sensorChart.data.labels.length > 20) {
-                sensorChart.data.labels.shift();
-                sensorChart.data.datasets[0].data.shift();
+                // دیگه داده‌ای حذف نمی‌کنیم
+
+                sensorChart.update();
             }
 
-            sensorChart.update();
-        }
 
         connectMQTT();
     </script>
     <script src="mqttws31.js"></script>
-
 </body>
 
 </html>
